--- a/src/components/video_section/videocomments_section/commentcard/_CommentCardStyles.scss
+++ b/src/components/video_section/videocomments_section/commentcard/_CommentCardStyles.scss
@@ -3,7 +3,7 @@
 
 .cardouterwrap{
     display: flex;
-    border-bottom: 1px solid $sliver-prime;
+    border-bottom: 1px solid $silver-prime;
     padding-top: 1rem;
     padding-bottom: 1rem;
 }
@@ -15,5 +15,17 @@
         display: flex;
         justify-content: space-between;
         margin-bottom: 1rem;
+        &__name{
+            @include bs.font700(none, 18px, $black-second)
+        }
+
+        &__date{
+            @include bs.font400(none, 18px, $silver-prime)
+        }
+    }
+
+    &__mid{
+        @include bs.font400(none, 18px, $black-prime)
+        
     }
 }
