--- a/src/components/video_section/videoinfo_section/videostats/_VideoStatsStyles.scss
+++ b/src/components/video_section/videoinfo_section/videostats/_VideoStatsStyles.scss
@@ -3,12 +3,12 @@
 
 
 .videostatsbackground{
-    background-color: aqua;
+    // background-color: aqua;
     @include bs.padding16;
 }
 
 .videostats{
-    border-bottom: 1px solid $sliver-prime;
+    border-bottom: 1px solid $silver-prime;
     display: flex;
     justify-content: space-between;
     padding-top: 1rem;
@@ -24,7 +24,15 @@
     justify-content: space-between;
     gap: 1rem;
     // the "gap" attribute determines the size between for both left and right side
+    &__author{
+        @include bs.font700(13px, 18px, $black-second);
+    }
+
+    &__date{
+        @include bs.font400(13px, 18px, $silver-prime);
+    }
 }
+
 
 .rightstats{
     display: flex;
@@ -33,5 +41,10 @@
 
     &__likes, &__veiws{
         display: flex;
+        padding-left: 2rem;
+        &__counter{
+        @include bs.font400(13px, 18px, $silver-second);
+        padding-left: 0.5rem;
+        }
     }
 }
