--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -9,12 +9,12 @@ $postdesktop-breakpoint: 1440px;
 //Primary Colors
 $black-prime: #323232;
 $blue-prime: #0095FF;
-$sliver-prime: #AFAFAF;
+$silver-prime: #AFAFAF;
 $white-prime: #FFFFFF;
 
 // Secondary Colors
 $black-second: #000000;
 $blue-second: #0065AD;
 $silver-second: #E1E1E1;
-$white-second: #E1E1E1;
+$white-second: #FAFAFA;
 
