--- a/src/components/navbar_section/_NavBarStyles.scss
+++ b/src/components/navbar_section/_NavBarStyles.scss
@@ -13,21 +13,38 @@
     padding-top: 1rem;
     padding-bottom: 1rem;
 
+    @include bs.tablet{
+        @include bs.padding24;
+        // background-color: red;
+        flex-direction:row;
+        justify-content: space-between;
+        align-items: center;
+    }
+
 
     &__first{
-        // background-color: grey;
+        background-color: grey;
         display: flex;
         justify-content: center;
         flex-direction: row;
+
+        @include bs.tablet{
+            align-items: center;
+        }
         
     }
 
     &__second{
         background-color: $white-prime;
-        // height: 100px;
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
+
+        @include bs.tablet{
+            flex-wrap: nowrap;
+            align-items: center;
+            width: 60%;
+        }
     }
 }
 
@@ -37,6 +54,10 @@
     height: 25px;
     position: relative;
     margin-bottom: 1rem;
+
+    @include bs.tablet{
+        margin-bottom: 0rem;
+    }
 
     &__img{
         width: 100%;
@@ -55,15 +76,19 @@
 }
 
 .searchcontainer{
-    background-color: bisque;
+    // background-color: bisque;
     display: flex;
     flex-wrap: wrap;
-    height: 40px;
+    height: 36px;
     margin-right: 1rem;
     margin-bottom: 1rem;
     position: relative;
     flex-grow: 1;
-    // width: 300px;
+
+    @include bs.tablet{
+        height: 40px;
+        margin: 0rem;
+    }
 
     &__imgwarp{
         // background-color: red;
@@ -86,12 +111,24 @@
         padding-left: 2.5rem;
         width: 100%;
         border-radius: 4px;
-        border: 1px solid grey;
-        outline: none;
+        border: 1px solid $silver-second;
+        outline: none;  
+        @include bs.font400(10px, 20px, $black-second);
+        background-color: $white-second;
+        
+
+        @include bs.tablet{
+            @include bs.font400(12px, 20px, $black-second);
+            // background-color: grey;
+            width:200px;
+        }
+
+    
         // border-left: black;
         // might need to make this padding value something else more deliberate...
     }
 }
+
 .buttonupload{
     width: 100%;
     background-color: rgb(200, 210, 210);
