--- a/src/components/utility_components/avatar_component/_AvatarStyles.scss
+++ b/src/components/utility_components/avatar_component/_AvatarStyles.scss
@@ -1,11 +1,16 @@
+@use "../../../styles/partials/bootstrap" as bs;
+@import '../../../styles/partials/variables';
 .avatar__nav, .avatar__formicon{
-    height: 40px;
+    height: 36px;
     aspect-ratio: 1/1;
     overflow: hidden;
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
+    @include bs.tablet{
+        height: 40px;
+    }
 
 
     &__img1{
@@ -21,3 +26,10 @@
         transform: scale(1);
     }
 }
+
+.avatar__nav{
+    @include bs.tablet{
+        order: 1;
+    }
+}
+
