--- a/src/components/utility_components/button_component/_ButtonStyles.scss
+++ b/src/components/utility_components/button_component/_ButtonStyles.scss
@@ -1,9 +1,10 @@
+@use '../../../styles/partials/bootstrap' as bs;
 @import "../../../styles/partials/variables";
 .generalbutton {
   border: none;
   background-color: $blue-prime;
   color: $white-prime;
-  height: 40px;
+  height: 36px;
   border-radius: 4px;
   text-transform: uppercase;
   display: flex;
@@ -11,10 +12,23 @@
   position: relative;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+  @include bs.font400(12px, 20px, $white-prime);
+  
+  @include bs.tablet{
+    height: 40px;
+}
+  &:hover{
+    background-color: $blue-second;
+    cursor: pointer;
+  } 
 }
 
 .buttonupload {
   width: 100%;
+  @include bs.tablet{
+    width: 200px;
+    margin-right: 1rem;
+  }
 
   &__icon {
     position: absolute;
