--- a/src/components/utility_components/form_component/_FormStyles.scss
+++ b/src/components/utility_components/form_component/_FormStyles.scss
@@ -9,14 +9,19 @@
   margin-left: 1rem;
 
   &__label {
-    margin-bottom: 1rem;
+    // margin-bottom: 1rem;
+    @include bs.font400(13px, 18px, $silver-prime)
   }
 
   &__textarea {
     margin-bottom: 1rem;
-    height: 123px;
+    height: 6rem;
     outline: none;
     border-radius: 4px;
-    border: 1px solid $sliver-prime;
+    border: 1px solid $silver-prime;
+    resize: none;
+
+    padding-top: 0.75rem;
+    padding-left: 0.75rem;
   }
 }
