--- a/src/components/nextvideo_section/_NextVideoSectionStyles.scss
+++ b/src/components/nextvideo_section/_NextVideoSectionStyles.scss
@@ -2,6 +2,7 @@
 @import "../../styles/partials/variables";
 
 .nextvideosection{
+    background-color: $white-prime;
     @include bs.padding16;
     padding-top: 1rem;
     padding-bottom: 1rem;
