--- a/src/components/video_section/videoinfo_section/videodescription_section/_VideoDesStyles.scss
+++ b/src/components/video_section/videoinfo_section/videodescription_section/_VideoDesStyles.scss
@@ -3,6 +3,10 @@
 
 .videodesbackground{
     @include bs.padding16;
+
+    @include bs.desktop{
+        @include bs.paddingdesktop;
+    }
 }
 
 .videodes{
