--- a/src/App.scss
+++ b/src/App.scss
@@ -1,2 +1,21 @@
 @use "./styles/partials/bootstrap" as bs;
 @import "./styles/partials/variables";
+​
+.dtwarpperbackground{
+    @include bs.desktop{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        background-color: grey;
+        
+    }
+}
+​
+.dtwrapper0{
+    @include bs.desktop{
+        width: 1020px;
+        background-color: $white-prime;
+        display: flex;
+        justify-content: space-between;
+    }
+}
