--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -26,3 +26,8 @@
     padding-left: 1.5rem;
     padding-right: 1.5rem;
 }
+
+@mixin paddingdesktop{
+    padding-left: 0rem;
+    padding-right: 0rem;
+}
