--- a/src/components/video_section/videoinfo_section/videodescription_section/_VideoDesStyles.scss
+++ b/src/components/video_section/videoinfo_section/videodescription_section/_VideoDesStyles.scss
@@ -6,12 +6,12 @@
 
     @include bs.desktop{
         @include bs.paddingdesktop;
+        padding-right: 1.5rem;
     }
 }
 
 .videodes{
     padding-top: 1rem;
     padding-bottom: 1rem;
-
     @include bs.font400(13px, 18px, $black-prime)
 }
