--- a/src/components/video_section/videoinfo_section/videotitle/_VideoTitleStyles.scss
+++ b/src/components/video_section/videoinfo_section/videotitle/_VideoTitleStyles.scss
@@ -12,7 +12,7 @@
 .videotitle{
     padding-top: 1rem;
     padding-bottom: 1rem;
-    border-bottom: 1px solid $silver-prime;
+    border-bottom: 1px solid $silver-second;
     @include bs.font700(24px, 32px, $black-prime);
     
     @include bs.tablet{
