--- a/src/components/nextvideo_section/_NextVideoSectionStyles.scss
+++ b/src/components/nextvideo_section/_NextVideoSectionStyles.scss
@@ -11,6 +11,13 @@
     justify-content: space-evenly;
     gap: 1rem;
 
+    @include bs.desktop{
+        @include bs.padding24;
+        width: 300px;
+        justify-content: flex-start;
+        border-left: 1px solid $silver-second;
+    }
+
     &__title{
         text-transform: uppercase;
         @include bs.font400(13px, 18px, $silver-prime)
