--- a/src/components/utility_components/form_component/_FormStyles.scss
+++ b/src/components/utility_components/form_component/_FormStyles.scss
@@ -18,7 +18,7 @@
     height: 6rem;
     outline: none;
     border-radius: 4px;
-    border: 1px solid $silver-prime;
+    border: 1px solid $silver-second;
     resize: none;
 
     padding-top: 0.75rem;
