--- a/src/components/video_section/videocomments_section/commentsection/_CommentStyles.scss
+++ b/src/components/video_section/videocomments_section/commentsection/_CommentStyles.scss
@@ -13,7 +13,7 @@
   // background-color: antiquewhite;
   display: flex;
   flex-direction: column;
-  border-bottom: 1px solid $silver-prime;
+  border-bottom: 1px solid $silver-second;
 
   &__top{
     @include bs.font700(13px, 18px, $black-prime);
@@ -26,7 +26,7 @@
     justify-content: space-between;
 
     @include bs.desktop{
-      @include bs.padding16;
+      @include bs.padding24;
 
     }
   }
