Added successful react routing

--- a/src/pages/MainIDpage/_MainIDBody.scss
+++ b/src/pages/MainIDpage/_MainIDBody.scss
@@ -1,5 +1,5 @@
-@use "../styles/partials/bootstrap" as bs;
-@import "../styles/partials/variables";
+@use "../../styles/partials/bootstrap" as bs;
+@import "../../styles/partials/variables";
 
 .dtwarpperbackground{
     @include bs.desktop{
