--- a/src/components/navbar_section/_NavBarStyles.scss
+++ b/src/components/navbar_section/_NavBarStyles.scss
@@ -12,11 +12,9 @@
     background-color: $white-prime;
     @include bs.padding16;
     height: auto;
-    // height: 200px;
-    // this is not respecting the imported htmls from the components
+
     display: flex;
     flex-direction:column;
-    // justify-content: space-between;
     padding-top: 1rem;
     padding-bottom: 1rem;
 
@@ -48,12 +46,15 @@
     &__second{
         background-color: $white-prime;
         display: flex;
-        justify-content: space-between;
         flex-wrap: wrap;
 
         @include bs.tablet{
             flex-wrap: nowrap;
             align-items: center;
+            width: auto;
+        }
+
+        @include bs.desktop{
             width: 50%;
         }
     }
@@ -76,20 +77,18 @@
     }
 
     &__link{
-        // background-color: red;
         position: absolute;
         width: inherit;
         height: inherit;
         left: 0px;
         opacity: 0;
-        // this opacity attribute allow the element to have value, but display i
     }
 }
 
 .searchcontainer{
-    // background-color: bisque;
     display: flex;
     flex-wrap: wrap;
+    width: 75%;
     height: 36px;
     margin-right: 1rem;
     margin-bottom: 1rem;
@@ -103,7 +102,6 @@
     }
 
     &__imgwarp{
-        // background-color: red;
         height: 100%;
         aspect-ratio: 1/1;
         position: absolute;
@@ -113,9 +111,6 @@
 
         &__iconsearch{
             width: 50%;
-            // position: absolute;
-            // display: block;
-            // margin: auto;
         }
     }
 
@@ -131,19 +126,29 @@
 
         @include bs.tablet{
             @include bs.font400(12px, 20px, $black-second);
-            // background-color: grey;
             margin-right:1rem;
             width:200px;
         }
 
-    
-        // border-left: black;
-        // might need to make this padding value something else more deliberate...
+        @include bs.desktop{
+            flex-grow:1;
+            margin-right:1.5rem;
+        }
     }
 }
 
-.buttonupload{
-    width: 100%;
-    background-color: rgb(200, 210, 210);
-    display: flex;
+.uploadbuttonwrapper{
+    flex-basis:100%;
+
+    @include bs.tablet{
+        flex-basis: 0;
+    }
+}
+
+.avatarwrapper{
+    width: 36px;
+    @include bs.tablet{
+        width: 40px;
+        order: 1;
+    }
 }
