--- a/src/components/utility_components/avatar_component/_AvatarStyles.scss
+++ b/src/components/utility_components/avatar_component/_AvatarStyles.scss
@@ -1,7 +1,7 @@
 @use "../../../styles/partials/bootstrap" as bs;
 @import '../../../styles/partials/variables';
 .avatar__nav, .avatar__formicon{
-    height: 36px;
+    width: 36px;
     aspect-ratio: 1/1;
     overflow: hidden;
     border-radius: 50%;
@@ -9,27 +9,19 @@
     justify-content: center;
     align-items: center;
     @include bs.tablet{
-        height: 40px;
+        width: 40px;
     }
 
 
     &__img1{
         height: 100%;
-        // object-fit: contain;
         transform: scale(1);
         transform: translateX(7px);
     }
 
     &__img2{
         height: 100%;
-        // object-fit: contain;
         transform: scale(1);
-    }
-}
-
-.avatar__nav{
-    @include bs.tablet{
-        order: 1;
     }
 }
 
